Fixes z-index for navbar that caused bug in FF
[finishes#47079959]

* Modified global variable for navbar's z-index to be lower than
  modal overlay's z-index

Was there a reason why navbar z-index was exactly 1030 ?

--- a/app/assets/stylesheets/globals/_variables.css.scss
+++ b/app/assets/stylesheets/globals/_variables.css.scss
@@ -47,6 +47,6 @@ $font-bold: 'Futura-heavy', sans-serif;
 
 // Z index
 
-$nav-z-index: 1030;
 $modal-z-index: 1000;
+$nav-z-index: $modal-z-index - 2; // -1 is overlay, so it must be lower than overlay, that's why -2
 $absolute-top-z-index: 9000;
